Lucie's comments on calibration

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -33,6 +33,7 @@
 \usetikzlibrary{matrix}
 \usepackage{thesis_defs}
 \usepackage{CLICdp_definitions} % nalipour
+%\usepackage{wrapfig} % nalipour
 \usepackage{upgreek}
 
 % nalipour packages
