--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -537,3 +537,8 @@ author = "F. Krummenacher",
       title          = "H6 beam line",
       url            = "http://sba.web.cern.ch/sba/BeamsAndAreas/resultbeam.asp?beamline=H6"
 }
+
+@online{medipixCollaboration,
+      title          = "Medipix Collaboration",
+      url            = "http://medipix.web.cern.ch/medipix/"
+}
