[Telescope] changed the residuals with the case where the cut on chi2 is at 100

--- a/include/Telescope.tex
+++ b/include/Telescope.tex
@@ -255,7 +255,9 @@ and the DUT.
 
 The EUTelescope software framework (c.f. \cref{sec:EUTelescope}) is
 used to reconstruct the hits on the telescope planes using the
-$\eta$-correction method~\cite{Belau:1983eh} and fit the tracks.
+$\eta$-correction method~\cite{Belau:1983eh}. The tracks are fitted
+based on a $\chi^2$-minimisation method as described in
+\cref{sec:EUTelescope}.
 
 %% --------------------------------------------- %%
 \subsection{Single-hit resolution on the telescope planes}
