--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -585,9 +585,8 @@ integration time is enough to collect most of the signal.
 
 
 %% --------------------------------------------- %%
-\newpage
-\subsection{Results}
-\label{sec:activeEdge_results}
+\subsection{Conventions used for the presentation of the results}
+\label{sec:activeEdge_convention}
 
 The performance of the edge is studied in data in terms of the
 efficiency and the collected charge at the edge as a function of the
@@ -606,374 +605,168 @@ last pixel. The y-axis combines the tracks for the even rows (in the
 coordinates between 0~mm and 0.055~mm) and the odd rows (in the
 coordinates between 0.055~mm and 0.11~mm). The z-axis shows the
 efficiency for the plots on the left. To increase the statistics, the
-beam was focused on only one of the edges during the data taking.
-
-The assemblies without (\cref{fig:20-NGR_eff_TOT}) and with floating
-guard ring (\cref{fig:23-FGR_eff_TOT}) are efficient up to the
-physical edge of the sensor. The charge is fully collected by the last
-pixel for 20-NGR-50. For 23-FGR-50, a loss of the charge near the edge
-is observed (charge lost in the guard ring).
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at (0,0) {
-        \includegraphics[width=\textwidth, page=3]{figures/TestBeam/edge_bcp.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at 
-      (0,0){\includegraphics[width=\textwidth, page=5]{figures/TestBeam/edge.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}
-  \caption{(a) Efficiency and (b) charge (TOT) collected as a function of the
-    track position for the assembly 20-NGR-50.}
-  \label{fig:20-NGR_eff_TOT}
-\end{figure}
-
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at (0,0)
-      {\includegraphics[width=\textwidth, page=6]{figures/TestBeam/edge_bcp.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at 
-      (0,0){\includegraphics[width=\textwidth, page=8]{figures/TestBeam/edge.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}
-  \caption{(a) Efficiency and (b) charge (TOT) collected as a function of the
-    track position for the assembly 23-FGR-50.}
-  \label{fig:23-FGR_eff_TOT}
-\end{figure}
-
-The grounded guard ring degrades significantly the detection
-efficiency at the edge. For 28-GNDGR-50, the efficiency drops between
-pixels as shown in \cref{fig:28-GNDGR_eff_TOT}. A large part of the
-charge is collected by the guard ring. For 55-GNDGR-50, as shown in
-\cref{fig:55-GNDGR_eff_TOT}, the edge is not efficient anymore due to
-the reduced amount of detected charge in thin sensors and its low
-sharing to the neighbouring pixels (lower than the threshold of the
-readout chip). All of the charge created in the edge is collected by
-the guard ring.
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at (0,0)
-      {\includegraphics[width=\textwidth, page=9]{figures/TestBeam/edge_bcp.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}~
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at 
-      (0,0){\includegraphics[width=\textwidth, page=11]{figures/TestBeam/edge.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}
-  \caption{(a) Efficiency and (b) charge (TOT) collected as a function of the
-    track position for the assembly 28-GNDGR-50.}
-  \label{fig:28-GNDGR_eff_TOT}
-\end{figure}
-
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at (0,0)
-      {\includegraphics[width=\textwidth, page=12]{figures/TestBeam/edge_bcp.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at 
-      (0,0){\includegraphics[width=\textwidth,
-        page=14]{figures/TestBeam/edge.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}
-  \caption{(a) Efficiency and (b) charge (TOT) collected as a function
-    of the track position for the assembly 55-GNDGR-50.}
-  \label{fig:55-GNDGR_eff_TOT}
-\end{figure}
-
-For thin sensors, a floating guard ring appears to be the most
-suitable solution, as it shows a high detection efficiency at the edge
-and an acceptable breakdown behaviour
-(\cref{fig:IVmeasurements}). Tests with additional assemblies will be
-needed to confirm this observation.
-
-For the thicker sensors ($100\,\micron$ and $150\,\micron$), the
-grounded guard ring is a suitable solution. The assemblies
-55-GNDGR-100 and 55-GNDGR-150 are efficient up to the edge even with a
-loss of the charge near the edge as shown in
-\cref{fig:55-GNDGR-100_eff_TOT,fig:55-GNDGR-150_eff_TOT}.
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at (0,0)
-      {\includegraphics[width=\textwidth, page=15]{figures/TestBeam/edge_bcp.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at 
-      (0,0){\includegraphics[width=\textwidth,
-        page=17]{figures/TestBeam/edge.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}
-  \caption{(a) Efficiency and (b) charge (TOT) collected as a function of the
-    track position for the assembly 55-GNDGR-100.}
-  \label{fig:55-GNDGR-100_eff_TOT}
-\end{figure}
-
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at (0,0)
-      {\includegraphics[width=\textwidth, page=18]{figures/TestBeam/edge_bcp.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \centering
-    \begin{tikzpicture}
-      \node[anchor=south west,inner sep=0] (image) at 
-      (0,0){\includegraphics[width=\textwidth,
-        page=20]{figures/TestBeam/edge.pdf}};
-    \end{tikzpicture}
-    \caption{}
-  \end{subfigure}
-  \caption{(a) Efficiency and (b) charge (TOT) collected as a function of the
-    track position for the assembly 55-GNDGR-150.}
-  \label{fig:55-GNDGR-150_eff_TOT}
-\end{figure}
-
-\cref{fig:EdgeEff_2D} summarises the edge efficiency as a function of
-the track position relative to the edge projected in one direction for
-the different assemblies.
+beam was focused on only one of the edges during the data taking. The
+hits for the assembly 20-NGR-50 are shown in \cref{fig:hitMapW19G7}.
 
 \begin{figure}[htbp]
   \centering
-  %EdgeEfficiency_2D.py
-  \includegraphics[width=0.7\textwidth]{figures/ActiveEdge/edgeEff_2D.pdf}
-  \caption{The edge efficiency as a function of the track position
-    relative to the edge projected in one direction.}
-  \label{fig:EdgeEff_2D}
+  \includegraphics[width=0.7\textwidth]{figures/ActiveEdge/hitMap_W19_G7.pdf}
+  \caption{The hits on the assembly 20-NGR-50: the beam is focused on the
+    edge of the assembly in order to increase the statistics for the
+    edge performance studies.}
+  \label{fig:hitMapW19G7}
 \end{figure}
 
-%% %% --------------------------------------------- %%
-%% \newpage
-%% \section{TCAD simulations of active-edge sensors}
 
-
-
-
-
-%% --------------------------------------------- %%
-%% \subsection{Validation of simulation with
-%%   data}\label{sec:TCAD_dataValidation_activeEdge}
-
-%% The transient simulation of the active edge devices is done by a
-%% charge deposition of $10^{-5}\,\picocoulomb/\micron$ along the
-%% particle track. This corresponds to an energy deposition of
-%% $\sim80\,\text{e-}/\micron$ as expected for the MIP in
-%% silicon. \cref{fig:TCAD_transientSimu} illustrates a MIP traversing
-%% the sensor at a distance of $10\,\micron$ from the left edge. The
-%% electron density 6~ns after the particle hit is illustrated. The
-%% electrodes collect the current generated by the electrons and it is
-%% integrated over 15~ns.
-
-%% \begin{figure}[htbp]
-%%   \centering
-%%   \begin{tikzpicture}
-%%     \node[anchor=south west,inner sep=0] (image) at
-%%     (0,0){\includegraphics[width=0.7\textwidth]{figures/ActiveEdge/TCAD_transient_23FGR_hitpos_60.png}};
-%%     \begin{scope}[x={(image.south east)},y={(image.north west)}]
-
-%%       %% \draw[help lines,xstep=.1,ystep=.1] (0, 0) grid (1,1);
-%%       %% \foreach \x in {0,1,...,9} { \node [anchor=north] at (\x/10,0) {0.\x}; }
-%%       %% \foreach \y in {0,1,...,9} { \node [anchor=east] at (0,\y/10) {0.\y}; }
-
-%%       \draw[->, very thick] (0.093, 0.0) -- (0.093, 1.05);
-%%     \end{scope}
-%%   \end{tikzpicture}
-%%   \caption{Transient simulation of a particle track traversing the
-%%     sensor at a distance of $10\,\micron$ from the edge (the
-%%     arrow). The electron density 6~ns after the particle hit is
-%%     shown.}
-%%   \label{fig:TCAD_transientSimu}
-%% \end{figure}
-
-
-%% In simulation, hits are generated at different positions. The charge
-%% collected by each electrode is calculated over the integration
-%% time. 
-\cref{fig:TCAD_vs_data_20_NGR,fig:TCAD_vs_data_23_FGR,fig:TCAD_vs_data_28_GNDGR,fig:TCAD_vs_data_55_GNDGR,fig:TCAD_vs_data_55_GNDGR_100,fig:TCAD_vs_data_55_GNDGR_150}
-compare the charge collected as a function of the hit position in data
-and TCAD simulations. In data, the charge deposited is plotted versus
-the track position given by the Timepix3 telescope (with a resolution
-of $\sim2\,\micron$). The charge deposited is obtained by applying the
-test-pulse calibrations to the data. For each track position, the
+The charge collected as a function of the track position is compared
+in data and TCAD simulations. In data, the charge deposited is plotted
+versus the track position given by the Timepix3 telescope (with a
+resolution of $\sim2\,\micron$). The charge deposited is obtained by
+applying the test-pulse calibrations to the data
+(c.f. \cref{sec:EnergyCalibration}). For each track position, the
 deposited charge is projected as a one-dimensional histogram and
 fitted with a Landau function convoluted with a Gaussian. The most
 probable value (MPV) of the Landau fit is then compared to the
 collected charge obtained in the TCAD simulations. In the TCAD
 simulations, a fixed amount of charge is deposited and, unlike the
-data, the fluctuations of the deposited charge are not
-considered. This can explain the minor discrepancies on the amount of
-the collected charge between simulation and data. The border of the
-last pixel (at 0~mm) is indicated with a dashed line and the physical
-sensor edge is shown in continuous line with the convention as
-illustrated in \cref{fig:Layout20_NGR}.
+data, the fluctuations of the deposited charge are not considered. The
+tracking resolution of $\sim2\,\micron$ is applied to the hit position
+in TCAD simulations. This can explain the minor discrepancies on the
+amount of the collected charge between simulation and data. The border
+of the last pixel (at 0~mm) is indicated with a dashed line and the
+physical sensor edge is shown in continuous line with the convention
+as illustrated in \cref{fig:Layout20_NGR}.
 
-For 20-NGR, the TCAD simulation agrees well with the data observation
-as shown in \cref{fig:TCAD_vs_data_20_NGR}.
+
+% The collected charge at the edge as a function of the track position
+% is also investigated. The pixel-by-pixel calibration as described in
+% \cref{sec:EnergyCalibration} is applied to convert the TOT value into
+% the energy deposition in units of the number of collected electrons.
+
+%% --------------------------------------------- %%
+\subsection{The performance of $50\,\micron$ thick sensors}
+
+The efficiency at the edge of the assemblies with a $50\,\micron$
+thick sensors is shown in \cref{fig:EdgeEfficiency_50micron}. The
+results are presented using the conventions as described in
+\cref{sec:activeEdge_convention}.
 
 \begin{figure}[htbp]
-  \centering
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_20_NGR.pdf}
-    \caption{}
+  \begin{subfigure}[b]{0.24\textwidth}
+    \centering
+    \includegraphics[width=\textwidth, page=3]{figures/TestBeam/edge_bcp.pdf}
+  \caption{20-NGR-50}\label{fig:EdgeEfficiency_20NGR50}
   \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_20_NGR.pdf}
-    \caption{}
+  \begin{subfigure}[b]{0.24\textwidth}
+    \centering
+    \includegraphics[width=\textwidth, page=6]{figures/TestBeam/edge_bcp.pdf}
+  \caption{23-FGR-50}\label{fig:EdgeEfficiency_23FGR50}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.24\textwidth}
+    \centering
+    \includegraphics[width=\textwidth, page=9]{figures/TestBeam/edge_bcp.pdf}
+  \caption{28-GNDGR-50}\label{fig:EdgeEfficiency_28GNDGR50}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.24\textwidth}
+    \centering
+    \includegraphics[width=\textwidth, page=12]{figures/TestBeam/edge_bcp.pdf}
+  \caption{55-GNDGR-50}\label{fig:EdgeEfficiency_55GNDGR50}
   \end{subfigure}
-  \caption{20-NGR}
-  \label{fig:TCAD_vs_data_20_NGR}
+  \caption{The efficiency at the edge as a function of the positions
+    for the assemblies having a sensor thickness of $50\,\micron$.}
+  \label{fig:EdgeEfficiency_50micron}
 \end{figure}
+
+The assemblies without (20-NGR-50) and with floating guard ring
+(23-FGR-50) are efficient up to the physical edge of the sensor as
+shown in
+\cref{fig:EdgeEfficiency_20NGR50,fig:EdgeEfficiency_23FGR50}. \cref{fig:ChargeCollectionNGRFGR}
+shows the charge collected at the edge as a function of the track
+position in data and TCAD simulations for 20-NGR-50 and 23-FGR-50. The
+charge is fully collected by the last pixel for 20-NGR-50. For
+23-FGR-50, a loss of the charge near the edge is observed (charge lost
+in the guard ring).
+
+
+\begin{figure}[htbp]
+  \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/20_NGR_Edep_TCAD_data.pdf}
+    \caption{20-NGR-50}\label{fig:ChargeCollection20NGR}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/23_FGR_Edep_TCAD_data.pdf}
+    \caption{23-FGR-50}\label{fig:ChargeCollection23FGR}
+  \end{subfigure}
+  \caption{Charge collected as a function of the track position at the
+    edge for the assemblies 20-NGR-50 and 23-FGR-50 in data and TCAD
+    simulations.}
+  \label{fig:ChargeCollectionNGRFGR}
+\end{figure}
+
+For 20-NGR, the TCAD simulation agrees well with the data observation
+as shown in \cref{fig:ChargeCollection20NGR}.
 
 To simulate a floating guard ring for 23-FGR, in TCAD, the electrode
 on the guard ring is forced to have no current and the potential is
-left undefined. The agreement seems good but in data it seems that
-more charge is collected by the guard ring than in simulation as shown
-in \cref{fig:TCAD_vs_data_23_FGR}.
- 
-\begin{figure}[htbp]
-  \centering
-  \begin{subfigure}[b]{0.5\textwidth}
+set to zero as initial condition. The agreement seems good but in data
+it seems that more charge is collected by the guard ring than in
+simulation as shown in \cref{fig:ChargeCollection23FGR}.
 
-    \caption{}
+The grounded guard ring degrades significantly the detection
+efficiency at the edge. For 28-GNDGR-50, the efficiency drops between
+pixels as shown in \cref{fig:EdgeEfficiency_28GNDGR50}. A large part
+of the charge is collected by the guard ring. For 55-GNDGR-50, as
+shown in \cref{fig:EdgeEfficiency_55GNDGR50}, the edge is not efficient
+anymore due to the reduced amount of detected charge in thin sensors
+and its low sharing to the neighbouring pixels (lower than the
+threshold of the readout chip). All of the charge created in the edge
+is collected by the guard ring.
+
+
+
+\begin{figure}[htbp]
+  \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/28_GNDGR_Edep_TCAD_data.pdf}
+    \caption{28-GNDGR-50}
   \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_23_FGR.pdf}
-    \caption{}
+  \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_Edep_TCAD_data.pdf}
+    \caption{55-GNDGR-50}
   \end{subfigure}
-  \caption{23-FGR: no calibration is available: TOT is multiplied by 128 to obtain the Edep in electrons.}
-  \label{fig:TCAD_vs_data_23_FGR}
+  \caption{Charge collected as a function of the track position at the
+    edge for the assemblies 28-GNDGR-50 and 55-GNDGR-50 in data and
+    TCAD simulations.}
+  \label{fig:ChargeCollectionNGRFGR_50}
 \end{figure}
 
 In the TCAD simulations for the grounded guard ring configurations,
 the electrode of the guard ring is forced to have no current and the
 potential is forced to be 0~V. For 28-GNDGR and 55-GNDGR, the TCAD
 simulations show a drop in the collected charge but less than in data
-as shown in
-\cref{fig:TCAD_vs_data_28_GNDGR,fig:TCAD_vs_data_55_GNDGR}. For
-55-GNDGR, in TCAD simulations charges are collected by the pixel even
-for hit positions which are very close to the physical edge since no
-threshold was applied in simulation. In data a threshold of $\sim$500
-electrons is applied.
-
-\begin{figure}[htbp]
-  \centering
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_28_GNDGR.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_28_GNDGR.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{28-GNDGR}
-  \label{fig:TCAD_vs_data_28_GNDGR}
-\end{figure}
+as shown in \cref{fig:ChargeCollectionNGRFGR_50}. For 55-GNDGR, in
+TCAD simulations charges are collected by the pixel even for hit
+positions which are very close to the physical edge since no threshold
+was applied in simulation. In data and in TCAD simulations a threshold
+of $\sim$500 electrons is applied.
 
 
-\begin{figure}[htbp]
-  \centering
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_55_GNDGR.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_55_GNDGR.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{55-GNDGR}
-  \label{fig:TCAD_vs_data_55_GNDGR}
-\end{figure}
-
-For 55-GNDGR-100 and 55-GNDGR-150 the agreement between data and
-simulation is perfect as shown in
-\cref{fig:TCAD_vs_data_55_GNDGR_100,fig:TCAD_vs_data_55_GNDGR_150}.
-
-\begin{figure}[htbp]
-  \centering
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_55_GNDGR_100.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_55_GNDGR_100.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{55-GNDGR-100}
-  \label{fig:TCAD_vs_data_55_GNDGR_100}
-\end{figure}
-
-
-
-\begin{figure}[htbp]
-  \centering
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_Edep_55_GNDGR_150.pdf}
-    \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.5\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/TCAD_data_55_GNDGR_150.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{55-GNDGR-150}
-  \label{fig:TCAD_vs_data_55_GNDGR_150}
-\end{figure}
-
-\cref{fig:TCAD_streamlines} compares the distribution of the
-streamlines in the edge for different configurations of guard
-rings. The generated charge follows the streamlines and gets collected
-by the implants. In the case where there is no guard ring, all the
-streamlines reach the first pixel. As confirmed by the data, all the
-charge in the edge is collected without any loss. In the case of a
-floating guard ring, few streamlines reach the guard ring. This means
-some charge is lost in the guard ring instead of being collected by
-the first pixel. Finally, in the case of a grounded guard ring more
-streamlines end up in the guard ring. This explains also the high drop
-in the collected charge in the edge region.
+Streamlines define a family of curves instantaneously tangent to the
+velocity vector of the flow. \cref{fig:TCAD_streamlines} compares the
+distribution of the streamlines in the edge for different
+configurations of guard rings. The generated charge follows the
+streamlines and gets collected by the implants. In the case where
+there is no guard ring, all the streamlines reach the first pixel. As
+confirmed by the data, all the charge in the edge is collected without
+any loss. In the case of a floating guard ring, few streamlines reach
+the guard ring. This means some charge is lost in the guard ring
+instead of being collected by the first pixel. Finally, in the case of
+a grounded guard ring more streamlines end up in the guard ring. This
+explains also the high drop in the collected charge in the edge
+region.
 
 \begin{figure}[htbp]
   \centering
@@ -1000,164 +793,219 @@ in the collected charge in the edge region.
   \label{fig:TCAD_streamlines}
 \end{figure}
 
+For thin sensors, a floating guard ring appears to be the most
+suitable solution, as it shows a high detection efficiency at the edge
+and an acceptable breakdown behaviour
+(\cref{fig:IVmeasurements}). Tests with additional assemblies will be
+needed to confirm this observation.
 
+%% --------------------------------------------- %%
+\subsection{The performance of $100\,\micron$ and $150\,\micron$ thick
+  sensors}
 
-
-\newpage
-\section{Results temp}
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=3]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=6]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=9]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=12]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp}
-\end{figure}
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=5]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=8]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=11]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth, page=14]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp2}
-\end{figure}
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/20_NGR_TOT_edge.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/23_FGR_TOT_edge.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/28_GNDGR_TOT_edge.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_TOT_edge.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp4}
-\end{figure}
-
-
-\begin{figure}[htbp]
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/20_NGR_Edep_TCAD_data.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/23_FGR_Edep_TCAD_data.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/28_GNDGR_Edep_TCAD_data.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.24\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_Edep_TCAD_data.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp5}
-\end{figure}
-
-
-
-
+For the thicker sensors of $100\,\micron$ and $150\,\micron$, the
+grounded guard ring is a suitable solution. The assemblies
+55-GNDGR-100 and 55-GNDGR-150 are efficient up to the edge even with a
+loss of the charge near the edge as shown in
+\cref{fig:EdgeEfficiency_100_150micron}.
 
 \begin{figure}[htbp]
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
     \includegraphics[width=\textwidth, page=15]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
+    \caption{55-GNDGR-100}\label{fig:EdgeEfficiency_55GNDGR100}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
     \includegraphics[width=\textwidth, page=18]{figures/TestBeam/edge_bcp.pdf}
-  \caption{}
+    \caption{55-GNDGR-150}\label{fig:EdgeEfficiency_55GNDGR150}
   \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp6}
+  \caption{The efficiency at the edge as a function of the positions
+    for the assemblies having sensors with thicknesses of (a)
+    $100\,\micron$ and (b) $150\,\micron$.}
+  \label{fig:EdgeEfficiency_100_150micron}
 \end{figure}
-
-
 
 \begin{figure}[htbp]
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
     \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_100_Edep_TCAD_data.pdf}
-  \caption{}
+  \caption{55-GNDGR-100}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
     \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_150_Edep_TCAD_data.pdf}
-  \caption{}
+  \caption{55-GNDGR-150}
   \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp7}
+  \caption{Charge collected as a function of the track position at the
+    edge for the assemblies 55-GNDGR-100 and 55-GNDGR-150 in data and
+    TCAD simulations.}
+  \label{fig:ChargeCollectionThickGNDGR}
 \end{figure}
 
+
+For 55-GNDGR-100 and 55-GNDGR-150 a good agreement between data and
+simulation is observed as shown in
+\cref{fig:ChargeCollectionThickGNDGR}.
+
+
+
+
+
+%% --------------------------------------------- %%
+\section{Summary}
+\label{sec:summary_activeEdge}
+\cref{fig:EdgeEff_2D} summarises the edge efficiency as a function of
+the track position relative to the edge projected in one direction for
+the different assemblies.
 
 \begin{figure}[htbp]
-  \begin{subfigure}[b]{0.45\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_100_TOT_edge.pdf}
-  \caption{}
-  \end{subfigure}\hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_150_TOT_edge.pdf}
-  \caption{}
-  \end{subfigure}
-  \caption{}
-  \label{fig:ResultsTemp8}
+  \centering
+  %EdgeEfficiency_2D.py
+  \includegraphics[width=0.7\textwidth]{figures/ActiveEdge/edgeEff_2D.pdf}
+  \caption{The edge efficiency as a function of the track position
+    relative to the edge projected in one direction.}
+  \label{fig:EdgeEff_2D}
 \end{figure}
+
+
+
+% \newpage
+% \section{Results temp}
+
+
+
+% \begin{figure}[htbp]
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth, page=5]{figures/TestBeam/edge_bcp.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth, page=8]{figures/TestBeam/edge_bcp.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth, page=11]{figures/TestBeam/edge_bcp.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth, page=14]{figures/TestBeam/edge_bcp.pdf}
+%   \caption{}
+%   \end{subfigure}
+%   \caption{}
+%   \label{fig:ResultsTemp2}
+% \end{figure}
+
+% \begin{figure}[htbp]
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/20_NGR_TOT_edge.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/23_FGR_TOT_edge.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/28_GNDGR_TOT_edge.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_TOT_edge.pdf}
+%   \caption{}
+%   \end{subfigure}
+%   \caption{}
+%   \label{fig:ResultsTemp4}
+% \end{figure}
+
+
+% \begin{figure}[htbp]
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/20_NGR_Edep_TCAD_data.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/23_FGR_Edep_TCAD_data.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/28_GNDGR_Edep_TCAD_data.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.24\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_Edep_TCAD_data.pdf}
+%   \caption{}
+%   \end{subfigure}
+%   \caption{}
+%   \label{fig:ResultsTemp5}
+% \end{figure}
+
+
+
+
+
+% \begin{figure}[htbp]
+%   \begin{subfigure}[b]{0.45\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth, page=15]{figures/TestBeam/edge_bcp.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.45\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth, page=18]{figures/TestBeam/edge_bcp.pdf}
+%   \caption{}
+%   \end{subfigure}
+%   \caption{}
+%   \label{fig:ResultsTemp6}
+% \end{figure}
+
+
+
+% \begin{figure}[htbp]
+%   \begin{subfigure}[b]{0.45\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_100_Edep_TCAD_data.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.45\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_150_Edep_TCAD_data.pdf}
+%   \caption{}
+%   \end{subfigure}
+%   \caption{}
+%   \label{fig:ResultsTemp7}
+% \end{figure}
+
+
+% \begin{figure}[htbp]
+%   \begin{subfigure}[b]{0.45\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_100_TOT_edge.pdf}
+%   \caption{}
+%   \end{subfigure}\hfill
+%   \begin{subfigure}[b]{0.45\textwidth}
+%     \centering
+%     \includegraphics[width=\textwidth]{figures/ActiveEdge/55_GNDGR_150_TOT_edge.pdf}
+%   \caption{}
+%   \end{subfigure}
+%   \caption{}
+%   \label{fig:ResultsTemp8}
+% \end{figure}
+
+
+
+
 
 
 %% %%%%%%%%%%%%%%%%%%%%
